@@ -4,15 +4,14 @@ include ../gnuwin32/MkRules
 CPPFLAGS=-I../include -DHAVE_CONFIG_H -DR_DLL_BUILD
 CSOURCES = \
 	bakslv.c binning.c \
-	cpoly.c cumsum.c \
+	cpoly.c \
 	fft.c fmin.c integrate.c interv.c \
 	lbfgsb.c \
 	machar.c maxcol.c \
 	optim.c \
 	pretty.c \
-	rcont.c rowsum.c \
+	rcont.c  \
 	strsignif.c \
-	tabulate.c \
 	uncmin.c \
 	zeroin.c
 FSOURCES = \
