@@ -27,30 +27,12 @@
 #include <R_ext/Boolean.h>
 #include <R_ext/Utils.h>
 
-/* This is called from bvalue() and others in ../library/modreg/src/ : */
+/* This is called from stats/src/bvalue.f, and packages gam and mda */
 int F77_SUB(interv)(double *xt, int *n, double *x,
 		    Rboolean *rightmost_closed, Rboolean *all_inside,
 		    int *ilo, int *mflag)
 {
   return findInterval(xt, *n, *x, *rightmost_closed, *all_inside, *ilo, mflag);
-}
-
-/* This one to be called from R {via .C(..)} :
-   FIXME: Replace by a .Call()able version!
-
-   Done for R 2.15.2, no longer used in R, but used in IBDsim and timeSeries
- */
-void find_interv_vec(double *xt, int *n,	double *x,  int *nx,
-		     int *rightmost_closed, int *all_inside, int *indx)
-{
-    int i, ii, mfl;
-    ii = 1;
-    for(i=0; i < *nx; i++) {
-	mfl = *all_inside;
-	ii = findInterval(xt, *n, x[i],
-			  *rightmost_closed, *all_inside, ii,  &mfl);
-	indx[i] = ii;
-    }
 }
 
 int findInterval(double *xt, int n, double x,
